# Mage

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  StyleGuide.md  mage.raddbg_project
.github/workflows/: build.yml
editor/: CMakeLists.txt
editor/src/: main.cpp
editor/themes/: dark.toml  steam.toml
engine/: CMakeLists.txt
engine/src/: main.cpp
engine/src/App/: App.cpp
engine/src/Assets/: Asset.cpp  Asset.h  AssetDatabase.cpp  AssetDatabase.h  AssetImporter.h
engine/src/Components/: Behaviour.h  Camera.h  Node.h  SceneComponent.h  Tag.h  Transform.h  UUID.h
engine/src/Core/: Application.cpp  Application.h  Assert.h  UUID.cpp  UUID.h  window.cpp  window.h
engine/src/Core/window/: window_headless.cpp  window_raylib.cpp  window_raylib.h
engine/src/Debug/: Instrumentor.cpp  Instrumentor.h  Logger.cpp  Logger.h
engine/src/Raylib/: Raylib.cpp  Raylib.h
engine/src/Renderer/: Gui.h  Renderer.cpp  Renderer.h
engine/src/Scene/: Entity.cpp  Entity.h  EntityTemplates.h  Scene.cpp  Scene.h  SceneTemplates.h
engine/src/SceneManager/: SceneManager.h
engine/src/Scripting/: Behaviour.cpp  Behaviour.h  Scripting.cpp  Scripting.h
engine/src/assets/: asset.hpp  asset_database.cpp  asset_database.hpp  asset_importer.cpp  asset_importer.hpp  filesystem_watcher.cpp  filesystem_watcher.hpp
engine/src/components/: camera.cpp  camera.hpp  transform.cpp  transform.hpp
engine/src/core/: application.cpp  application.hpp  reflection.hpp  serializable.hpp  uuid.cpp  uuid.h  uuid.hpp  window.cpp  window.hpp
engine/src/debug/: imgui.cpp  imgui.h  logger.cpp  logger.h  logger.hpp
engine/src/implementations/input/: glfw_input.cpp
engine/src/implementations/renderer/: opengl_shader.cpp  opengl_shader.hpp
engine/src/implementations/window/: glfw_window.cpp  glfw_window.hpp
engine/src/input/: input.cpp  input.hpp
engine/src/interfaces/: behaviour.hpp  input.hpp  renderer.h  renderer.hpp  shader.hpp  window.h  window.hpp
engine/src/platform/: platform.cpp  platform.hpp
engine/src/platform/application/: glfw.cpp  glfw.hpp
engine/src/platform/input/: glfw.cpp  glfw.hpp
engine/src/platform/renderer/: opengl33.cpp  opengl33.hpp
engine/src/platform/window/: glfw.cpp  glfw.hpp
engine/src/renderer/: renderer.hpp  shader.cpp  shader.hpp
engine/src/scene/: entity.hpp  scene.hpp
engine/src/scripting/: behaviour.hpp
engine/src/window/: window.cpp  window.hpp
game/: CMakeLists.txt
game/src/: main.cpp
runtime/: CMakeLists.txt
runtime/src/: main.cpp
tests/: CMakeLists.txt
tests/project/: .luarc.json  project.mageproj
tests/project/assets/scenes/: script.lua  test.scene
tests/project/scenes/: script.lua  test.scene
tests/src/: AssetDatabase.cpp  AssetDatabase.h  BehaviourTests.cpp  SceneTests.cpp
